--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hearsmart/website-nowoptics-my-eye-lab": "^0.1.28-alpha",
+    "@hearsmart/website-nowoptics-stanton-optics": "^0.1.28-alpha",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
